--- a/.github/workflows/build-and-serve-helm.yml
+++ b/.github/workflows/build-and-serve-helm.yml
@@ -4,9 +4,6 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   build:
@@ -14,25 +11,24 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4.2.2
 
     - name: Set up Helm
-      uses: azure/setup-helm@v1
-      with:
-        version: v3.7.1
+      uses: azure/setup-helm@v4.2.0
 
     - name: Build all Helm charts
       run: |
-        mkdir -p packaged
-        for chart in charts/*; do
-          helm package $chart -d packaged
+        mkdir -p packaged/
+
+        for chart in `ls . | grep -v packaged`; do
+          helm package $chart -d packaged/
         done
 
     - name: Create Helm repo index
       run: helm repo index packaged --url https://damfle.github.io/charts
 
     - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
+      uses: peaceiris/actions-gh-pages@v4.0.0
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.PAT_TOKEN }}
         publish_dir: ./packaged
