mod(mimir): make default pvc mandatory

--- a/mimir/templates/deployment.yaml
+++ b/mimir/templates/deployment.yaml
@@ -43,10 +43,15 @@ spec:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- with .Values.volumeMounts }}
           volumeMounts:
+            - name: data
+              mountPath: "/var/lib/mimir"
             {{- toYaml . | nindent 12 }}
           {{- end }}
       {{- with .Values.volumes }}
       volumes:
+        - name: data
+          persistentVolumeClaim:
+            claimName: mimir-data-pvc
         {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.nodeSelector }}
