--- a/mimir/values.yaml
+++ b/mimir/values.yaml
@@ -2,11 +2,55 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-# This will set the replicaset count more information can be found here: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
-replicaCount: 1
-
 storageClassName: "standard"
 storageSize: "1Gi"
+
+mimirConfig:
+  # Do not use this configuration in production.
+  # It is for demonstration purposes only.
+  multitenancy_enabled: false
+
+  blocks_storage:
+    backend: filesystem
+    bucket_store:
+      sync_dir: /var/lib/mimir/tsdb-sync
+    filesystem:
+      dir: /var/lib/mimir/data/tsdb
+    tsdb:
+      dir: /var/lib/mimir/tsdb
+
+  compactor:
+    data_dir: /var/lib/mimir/compactor
+    sharding_ring:
+      kvstore:
+        store: memberlist
+
+  distributor:
+    ring:
+      instance_addr: 0.0.0.0
+      kvstore:
+        store: memberlist
+
+  ingester:
+    ring:
+      instance_addr: 0.0.0.0
+      kvstore:
+        store: memberlist
+      replication_factor: 1
+
+  ruler_storage:
+    backend: filesystem
+    filesystem:
+      dir: /var/lib/mimir/rules
+
+  server:
+    http_listen_port: 9009
+    http_listen_address: 0.0.0.0
+  
+  store_gateway:
+    sharding_ring:
+      replication_factor: 1
+
 
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
@@ -80,18 +124,9 @@ readinessProbe:
     port: http
 
 # Additional volumes on the output Deployment definition.
-volumes:
-  - name: config
-    configMap:
-      name: mimir-config
-      items:
-        - key: mimir.yaml
-          path: mimir.yaml  
+volumes: []
 # Additional volumeMounts on the output Deployment definition.
-volumeMounts:
-  - name: config
-    mountPath: "/etc/mimir"
-    readOnly: true
+volumeMounts: []
 
 nodeSelector: {}
 
