--- a/mimir/templates/deployment.yaml
+++ b/mimir/templates/deployment.yaml
@@ -31,6 +31,8 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          command:
+            - -config.file=/etc/mimir/mimir.yaml
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
