--- a/mimir/templates/deployment.yaml
+++ b/mimir/templates/deployment.yaml
@@ -32,7 +32,7 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           command:
-            - /mimir
+            - /bin/mimir
             - --config.file=/etc/mimir/mimir.yaml
           ports:
             - name: http
